# distributor

./: .gitignore  Anchor.toml  Cargo.toml  Dockerfile  README.md
.github/workflows/: build.yaml  release.yaml
api/: Cargo.toml
api/src/: error.rs  main.rs  router.rs
audit/: README.md
bindings/python/: pyproject.toml
bindings/python/pytest_xprocess/: __init__.py
bindings/python/xprocess/: __init__.py
bindings/ts/: index.ts  package-lock.json  package.json  programId.ts  tsconfig.cjs.json
bindings/ts/accounts/: ClaimStatus.ts  MerkleDistributor.ts  SolCustody.ts  index.ts
bindings/ts/errors/: custom.ts
bindings/ts/raw_instructions/: claimLocked.ts  clawback.ts  index.ts  newDistributor.ts  setAdmin.ts  withdrawCustodySol.ts
bindings/ts/secondary/: index.ts  newClaim.ts  newDistrbutor.ts  stakeCustodySol.ts
cli/: Cargo.toml  README.md
merkle-tree/: Cargo.toml
merkle-tree/src/: airdrop_merkle_tree.rs  csv_entry.rs  tree_node.rs  utils.rs
merkle-tree/test_fixtures/: test_csv.csv
programs/merkle-distributor/: Cargo.toml
programs/merkle-distributor/idl/: merkle_distributor.json
programs/merkle-distributor/src/: error.rs  lib.rs
programs/merkle-distributor/src/instructions/: claim_locked.rs  clawback.rs  mod.rs  new_claim.rs  new_distributor.rs  withdraw_custody_sol.rs
programs/merkle-distributor/src/state/: merkle_distributor.rs
pytest_xprocess/: __init__.py
test/: requirements.txt  test.py  test_utils.py
test/client_py/: program_id.py
test/client_py/instructions/: new_distributor.py
verify/: Cargo.toml
